Add simple named Device to Entities

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 
-add_executable(app main.cpp)
+# add_subdirectory(entities)
+
+add_executable(app 
+main.cpp
+entities/Device1.cpp
+entities/Device1.hpp
+)
